Fix overlap for token list and resolve warnings

--- a/src/components/pages/questions/basic/TradingPairs/style.scss
+++ b/src/components/pages/questions/basic/TradingPairs/style.scss
@@ -18,8 +18,6 @@
 .trading-pairs-wrapper {
   width: 100%;
   min-height: 215px;
-  max-height: 400px;
-  overflow-y: auto;
 
   .pair-row {
     min-width: 100%;
